--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -14,6 +14,11 @@ body {
     overflow: hidden;
 }
 
+#map {
+    height: 200px;  
+    width: 100%; 
+   }
+
 
 header{
     color: #ffffff;
@@ -387,6 +392,7 @@ border-spacing: 0px;
 
 .flag-box {
     margin:auto;
+    height: 450px;
     width:100%;
     padding-top:40px;
     overflow: hidden;
@@ -394,39 +400,30 @@ border-spacing: 0px;
 
 .flag-box .left{
     float: left;
-    width:30%;
-    height:300px;
+    width:50%;
+    height:400px;
     padding:10px;
-    margin-right:10px;
-    border:1px solid #3ECCB5;
-    border-radius: 4px;
-}
-
-.flag-box .middle{
-    float: left;
-    width:30%;
-    height:300px;
-    padding:10px;
-    margin-right:10px;
-    border:1px solid #3ECCB5;
-    border-radius: 4px;
+    background: #ffffff;
+    box-shadow: 3px 3px 10px #5b7f8d;
 }
 
 
 .flag-box .right{
-    float: left;
-    width:30%;
-    height:300px;
+    float:right;
+    width:40%;
+    height:400px;
     padding:10px;
-    border: 1px solid #3ECCB5;
-    border-radius: 4px;
+    margin-right: 20px;
+    background: #ffffff;
+    box-shadow: 3px 3px 10px #5b7f8d;
 }
 
 
 .flag-box textarea {
     margin-bottom: 10px;
     outline: none;
-    height: 50px;
+    width: 100px;
+    height: 100px;
     font-size: 12px;
     width:90%;
     border:none;
@@ -453,14 +450,14 @@ border-spacing: 0px;
     cursor: pointer;
 }
  .flag-box input{
-    margin-bottom: 10px;
+    margin: 10px;
     width: 90%;
     border:none;
     font-size: 12px;
     border-bottom: 1px solid #5b7f8d;
     }
 
-    .image-box{
+.image-box{
         background: #000000;
         border-radius: 4px;
         width:100%;
@@ -469,8 +466,12 @@ border-spacing: 0px;
         text-align: center;
         line-height: 200px;
     }
+
+.flag-box .media-table{
+    height: 30%;
+}
     
-    .flag-box .image-box p {
+.flag-box .image-box p {
         color:#ffffff;
         font-size: 20px;
         font-weight: 100;
@@ -498,8 +499,8 @@ border-spacing: 0px;
     }
 
     .delete-box {
-        width:40%;
-        padding-left: 300px;
+        width:60%;
+        margin: auto;
         margin-top: 100px;
     }
 
